# harvestguard

./: CONTRIBUTING.md  Cargo.toml  README.md
api/: .env.example  README.md  package.json
api/src/: app.module.ts  main.ts
api/src/common/: soroban-client.service.ts
api/src/oracle/: oracle.controller.ts  oracle.module.ts  oracle.service.ts
api/src/oracle/dto/: oracle.dto.ts
api/src/policies/: policies.controller.ts  policies.module.ts  policies.service.ts
api/src/policies/dto/: policies.dto.ts
contracts/harvestguard/: Cargo.toml
contracts/harvestguard/src/: lib.rs  test.rs
contracts/weather-oracle/: Cargo.toml
contracts/weather-oracle/src/: lib.rs  test.rs
docs/: ARCHITECTURE.md
docs/adr/: 001-oracle-design.md  002-provider-trust.md
python/oracle_feeder/: .env.example  README.md  locations.json  main.py  soroban_client.py  weather_client.py
web/: README.md  index.html  script.js  styles.css
